--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans&display=swap" rel="stylesheet">
+    <title>hello test</title>
 </head>
 <body>
+        <nav>
+            <div class='left'>
+                <a href='/home'>
+                   <img src='./img/Logo.png'></div> 
+                </a>
+            <div class='right pNav'>
+                <div class='linkBlock'>
+                    <a href='/home'>home</a>
+                    <a href='/home'>contacts</a>
+                </div>
+                <div>
+                    <img src='./img/burg.png'>
+                </div>
+            </div>
+        </nav>
+        <main>
+            <div class='left'>left</div> 
+            <div class='right'>right</div> 
+        </main>
+    <p class='pMono'>Shooting Stars</p>
+    <h1 class='pTitle'>Pictures In The Sky</h1>
     
 </body>
 </html>
