--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <main>
             <div class='leftMain'>
                 <h3 class='pMono'>Shooting Stars</h3>
-                <h1 class='pTitle'>Pictures In The Sky</h1>
+                <h1 class='pTitle'>Pictures In&nbsp;The&nbsp;Sky</h1>
                 <p class='textBlock'>Many people has the notion that enlightenment is one state. Many also believe that when it is attained, a person is forever in that state.</p>
                 <div class='shareLinkBlock'>
                     <button class='blueGet button slideleft'>get started</button>
@@ -58,7 +58,12 @@
                     </a>
                 </div>
             </div> 
-            <div class='rightMain'>right</div> 
+            <div class='rightMain'>
+                <img src='./img/fotomain.png' alt='portrait'>
+                <img src='./img/fotoside.jpg' alt='portrait small' class='absoluteImg'>
+
+
+            </div> 
         </main>
 </div>
 <script src='scripts.js'></script>
