--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
                     <a href='#'>
                         <img src='./img/ictTwitter.svg'
                         alt='twitter icon'>
-                        </a>
+                    </a>
                     <a href='#'>
-                        <img src='./img/icLinkedin.svg'
-                        alt='linkedin icon'>
+                        <img src='./img/LinkedinIcon.svg'    width="10%" 
+                        height="10%"
+                    alt='linkedin icon'>
                     </a>
 
                     <a href='#'>
@@ -57,12 +58,15 @@
                         alt='google icon'>
                     </a>
                 </div>
+                <div class='buttonsNavNumb pButtons'>
+                    <button class='buttonActive'>1</button>
+                    <button>2</button>
+                    <button>3</button>
+                </div>
             </div> 
             <div class='rightMain'>
                 <img src='./img/fotomain.png' alt='portrait'>
                 <img src='./img/fotoside.jpg' alt='portrait small' class='absoluteImg'>
-
-
             </div> 
         </main>
 </div>
