--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             </div> 
             <div class='rightNav pNav'>
                 <div class='navBlock'>
-                    <a href='/home' class='active'>home</a>
-                    <a href='/home'>contacts</a>
+                    <a href='#' class='active'>home</a>
+                    <a href='#'>contacts</a>
                 </div>
                 <div class='respNav' id='crossToPush' onClick='changeHeight()'>
                     <div class='navLinkBlock blockClass' id='blockClass' >
@@ -45,16 +45,15 @@
                     <button class='blueGet button slideleft'>get started</button>
                     <a href='#'>
                         <img src='./img/ictTwitter.svg'
-                        alt='twitter icon'>
+                        alt='twitter icon' width="16px" height="16px">
                     </a>
                     <a href='#'>
-                        <img src='./img/LinkedinIcon.svg'    width="10%" 
-                        height="10%"
+                        <img src='./img/LinkedinIcon.svg'
                     alt='linkedin icon'>
                     </a>
 
                     <a href='#'>
-                        <img src='./img/icGoogle.svg'
+                        <img src='./img/icGoogle.svg' width="16px" height="16px"
                         alt='google icon'>
                     </a>
                 </div>
